--- a/themes/hugo-conference/layouts/partials/deadline.html
+++ b/themes/hugo-conference/layouts/partials/deadline.html
@@ -8,11 +8,11 @@
 
 <p itemprop="description">{{ .deadline.notification }}</p>
 
-<h5>Camera-ready Due</h5>
+<!-- <h5>Camera-ready Due</h5> -->
 
 <p itemprop="description">{{ .deadline.camera }}</p>
 
-<h5>Workshop date</h5>
+<!-- <h5>Workshop date</h5> -->
 
 <p itemprop="description">{{ .deadline.workshopdate }}</p>
 
