--- a/themes/hugo-conference/layouts/partials/organizer.html
+++ b/themes/hugo-conference/layouts/partials/organizer.html
@@ -12,7 +12,7 @@
 </tbody>
 </table>
 
-<h5>Program Committee</h5>
+<!-- <h5>Program Committee</h5> -->
 
 <table class="tg">
 <thead>
@@ -26,7 +26,7 @@
 </tbody>
 </table>
 
-<h5>Webmasters</h5>
+<!-- <h5>Webmasters</h5> -->
 
 <table class="tg">
 <thead>
