--- a/themes/hugo-conference/layouts/partials/header.html
+++ b/themes/hugo-conference/layouts/partials/header.html
@@ -10,7 +10,7 @@
       <a class="logo-link" href="#" title="{{ .name }}" itemprop="name">{{ .name }}</a>
     </h1>
     <!-- <h2 class="tagline">{{ .date }}, {{ .venue }}, {{ .city }}</h2> -->
-    <h2 class="tagline">{{ .city }}, {{ .state }}</h2>
+    <h2 class="tagline">{{ .date }}, {{ .city }}, {{ .state }}</h2>
 
 
     <div class="call-action-area">
