add short paper.

--- a/themes/hugo-conference/layouts/partials/deadline.html
+++ b/themes/hugo-conference/layouts/partials/deadline.html
@@ -12,7 +12,7 @@
 
 <p itemprop="description">{{ .deadline.camera }}</p>
 
-<!-- <h5>Workshop date</h5> -->
+<h5>Workshop date</h5>
 
 <p itemprop="description">{{ .deadline.workshopdate }}</p>
 
